--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "file-loader": "^6.2.0",
+    "css-loader": "^5.2.7",
     "gh-pages": "^6.1.1",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.3.1",
+    "image-minimizer-webpack-plugin": "^4.1.0",
+    "imagemin": "^9.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
     "mini-css-extract-plugin": "^1.6.2",
-    "sass": "^1.32.12",
-    "sass-loader": "^11.0.1",
+    "sass": "^1.78.0",
+    "sass-loader": "^11.1.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "babel-loader": "^9.1.3",
-    "image-minimizer-webpack-plugin": "^4.0.0",
-    "imagemin": "^8.0.1",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-pngquant": "^9.0.2",
-    "imagemin-svgo": "^10.0.1"
+    "style-loader": "^4.0.0"
   }
 }
